@@ -22,4 +22,18 @@
 
 include $(top_srcdir)/scripts/global.mk
 
-SUBDIRS = schroot-base schroot dchroot dchroot-dsa csbuild
+localedir = $(datadir)/locale
+
+LOCAL_CXXFLAGS = $(SCHROOT_CFLAGS) -I$(top_srcdir)/bin
+
+DEFS = -DLOCALEDIR=\"$(localedir)\" -D_GNU_SOURCE
+
+noinst_LTLIBRARIES = libschroot-base.la
+
+libschroot_base_la_SOURCES =		\
+	schroot-base-main.h		\
+	schroot-base-main.cc		\
+	schroot-base-options.h		\
+	schroot-base-options.cc		\
+	schroot-base-run.h
+libschroot_base_la_LIBADD = $(top_builddir)/sbuild/libsbuild.la
