@@ -435,6 +435,7 @@ AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([sbuild/Makefile])
 AC_CONFIG_FILES([sbuild/sbuild.pc])
 AC_CONFIG_FILES([bin/Makefile])
+AC_CONFIG_FILES([bin/schroot-base/Makefile])
 AC_CONFIG_FILES([bin/schroot/Makefile])
 AC_CONFIG_FILES([bin/schroot/pam/Makefile])
 AC_CONFIG_FILES([bin/schroot/exec/Makefile])
