@@ -463,6 +463,7 @@ WARN_LOGFILE           = schroot.log
 # with spaces.
 
 INPUT                  = @top_srcdir@/sbuild \
+                         @top_srcdir@/bin/schroot-base \
                          @top_srcdir@/bin/schroot \
                          @top_srcdir@/bin/dchroot \
                          @top_srcdir@/bin/dchroot-dsa \
